# gepa-optimizer

./: .env.example  .gitignore  README.md  example.py  example_training_data.json  example_with_simple_logging.py  main.py  pyproject.toml  test_llm_evaluation.py  test_logging.py  test_speed_optimizations.py
data/: example_training_data.json  pupa_tnb.parquet  pupa_training_data.json
src/gepa_optimizer/: __init__.py  cli.py  core.py  models.py
